<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="NavigationView"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myLocation"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_DonorMap"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/log_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="@string/menu_send" />


        </menu>
    </item>

</menu>
